# react-docs-ui

./: .gitignore  Dockerfile  FEATURE_SYNC_GUIDE.zh-CN.md  README-zh.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.lib.json  tsconfig.node.json  vite.config.lib.ts  vite.config.ts
.github/workflows/: build-pdf-server.yml
docker/pdf-server/: .dockerignore  Dockerfile  README.md  docker-compose.yml
plugins/: font-download-plugin.ts
public/: changelog-index-en.json  changelog-index-zh-cn.json  llms-full.txt  llms.txt  search-index-en.json  search-index-zh-cn.json
public/config/: site.en.yaml  site.schema.json  site.yaml
rust-pdf-server/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
rust-pdf-server/src/: main.rs  parser.rs  pdf.rs  styles.rs
scripts/: cli.mjs  generate-changelog-index.mjs  generate-doc-git-meta.mjs  generate-feed.mjs  generate-llms-files.mjs  generate-pdf-cli.ts  generate-search-index.mjs  generate-shiki-bundle.mjs  generate-sitemap.mjs  pdf-generator.ts  pdf-server.ts
src/: App.tsx  docs-app.ts  external-modules.d.ts  generated.d.ts  index.css  index.ts  katex-physics.d.ts  main.tsx  mdast.d.ts  shiki-modules.d.ts
src/app/: DocsApp.tsx
src/components/: AnnouncementBar.tsx  BookmarkButton.tsx  Breadcrumb.tsx  CommandMenu.tsx  ComponentProvider.tsx  DocsLayout.tsx  ExportAllDialog.tsx  ExportToolbar.tsx  FloatingActionBall.tsx  FloatingNavBall.tsx  FontProvider.tsx  Footer.tsx  GlobalContextMenu.tsx  HeaderNav.tsx  ImageViewer.tsx  LanguageSwitcher.tsx  (+13 more)
(+164 files in other folders)
